<resources>
    <string name="app_name">first</string>
    <string name="go_back">車両番号を確認のうえ、クルマの前で利用開始ボタンを押してください。</string>
    <string name="text_return">利用開始(解錠)</string>
    <string name="ready_to_start">ready_to_start</string>
    <string name="start_task">start_task</string>
    <string name="title_activity_sub">SubActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toast_btn">toast</string>
    <string name="snack">snack</string>
    <string name="notes">※位置情報の利用を許可してください。\n※iOS14以降をお使いの方は、正確な位置を有効にしてください。\n※操作が反映されるまで、数分かかる場合がございます。</string>
    <string name="form_btn">form</string>
    <string name="send_btn">send</string>
    <string name="web_btn">Web</string>
</resources>